# sample_cmake_project_with_boost

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.sample  build.cmd  main.cpp  set_BOOST_ROOT.local.sample  simple_project.kdev4
.kdev4/: simple_project.kdev4
