PROJECT(test01)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

IF (EXISTS set_BOOST_ROOT.local)
	INCLUDE(set_BOOST_ROOT.local)
ENDIF()

FIND_PACKAGE(Boost REQUIRED COMPONENTS system)

LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})

ADD_EXECUTABLE(test01 main.cpp)
TARGET_LINK_LIBRARIES(test01 ${Boost_LIBRARIES})
